# SPDX-License-Identifier: GPL-2.0-only
# Copyright (C) 2025 CPU bot contributors
#
# CPU bot - A next-generation EESSI build-and-deploy bot.
#
# This file defines the project metadata, dependencies, and tool configurations.
[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpu"
dynamic = ["version"]
description = "CPU - Next generation EESSI build-and-deploy bot"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPLv2"}
authors = [
    {name = "Thomas Roeblitz", email = "thomas.roblitz@uib.no"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "PyGithub>=2.1.0",            # GitHub API interaction and webhook handling
    "pyyaml>=6.0",                # Configuration file parsing (config.yaml)
    "requests>=2.31.0",           # HTTP requests for webhooks and API calls
    "python-dotenv>=1.0.0",       # Load secrets from .env files
    "APScheduler>=3.10.0",        # Periodic task scheduling (timer component)
    "cryptography>=41.0.0",       # Encryption for secret storage and webhook signature validation
    "typing-extensions>=4.5.0; python_version < '3.10'",  # Backport modern type hints for Python 3.9
]

[project.optional-dependencies]
dev = [
    # Building
    "build==1.3.0",               # A simple, correct Python build frontend

    # Testing
    "pytest==8.3.3",              # Test framework
    "pytest-cov==5.0.0",          # Code coverage reporting
    "coverage==7.6.9",            # Code coverage tool
    "pytest-asyncio==1.2.0",      # Async test support (latest version that supports Python 3.9)
    
    # Type checking
    "mypy==1.11.1",               # Static type checker (primary)
    "pyright==1.1.407",           # Static type checker (secondary validation)
    
    # Code quality
    "ruff==0.14.5",               # Fast Python linter (replaces flake8, isort, etc.)
    "black==24.10.0",             # Code formatter
    "flake8==7.1.1",              # Python linter
    "flake8-black==0.3.6",        # plugin for black
    "pylint==3.3.1",              # Python linter
   
    # Docs quality
    "mdformat==0.7.22",           # CommonMark compliant Markdown formatter (latest version that supports Python 3.9)
    "codespell==2.4.1",           # Fix common misspellings in text files
 
    # Type stubs for third-party libraries
    "types-PyYAML==6.0.12.20250915",    # Type stubs for PyYAML
    "types-requests==2.32.4.20250913",  # Type stubs for requests
]

[project.scripts]
cpu = "cpu.__main__:main"

[project.urls]
Homepage = "https://github.com/trz42/cpu"
Documentation = "https://github.com/trz42/cpu/tree/main/docs"
Repository = "https://github.com/trz42/cpu"
Issues = "https://github.com/trz42/cpu/issues"

# ----------------------------
# Tool configuration sections
# ----------------------------

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.codespell]
skip = ".git,*.png,*.jpg,*.svg,*.gif,.mypy_cache"
ignore-words-list = "teh"
check-filenames = true
check-hidden = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
skip_covered = false
show_missing = true
fail_under = 80

[tool.coverage.run]
branch = true
source = ["src"]
relative_files = true
omit = [
    "*/tests/*",
#    "*/__init__.py",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]  # compatible with Black
select = ["E", "F", "W", "BLK"]   # include Black plugin codes
exclude = [".git", "__pycache__", "build", "dist"]
max-complexity = 10

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
packages = ["cpu", "tests"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Start with these modules requiring full type coverage
[[tool.mypy.overrides]]
module = "cpu.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Allow some flexibility for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "APScheduler.*",
    "github.*",
]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "build",
    "dist",
]
typeCheckingMode = "strict"
pythonVersion = "3.9"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportPrivateUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.setuptools_scm]

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["src*"]
# exclude = ["tests*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
