# SPDX-License-Identifier: GPL-2.0-only
# Copyright (C) 2025 CPU contributors
#
# CPU - The next-generation EESSI build-and-deploy bot.
#
# This file defines the project metadata, dependencies, and tool configurations.
[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpu"
dynamic = ["version"]
description = "CPU - Next generation EESSI build-and-deploy bot"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-2.0-only"
authors = [
    {name = "Thomas Roeblitz", email = "thomas.roblitz@uib.no"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "PyGithub>=2.1.0",            # GitHub API interaction and webhook handling
    "pyyaml>=6.0",                # Configuration file parsing (config.yaml)
    "requests>=2.31.0",           # HTTP requests for webhooks and API calls
    "python-dotenv>=1.0.0",       # Load secrets from .env files
    "APScheduler>=3.10.0",        # Periodic task scheduling (timer component)
    "cryptography>=41.0.0",       # Encryption for secret storage and webhook signature validation
    "typing-extensions>=4.5.0; python_version < '3.10'",  # Backport modern type hints for Python 3.9
    "terminaltexteffects==0.12.0",  # TerminalTextEffects (version 0.13.0 failed to install)
]

[project.optional-dependencies]
dev = [
    # Building
    "build==1.3.0",               # A simple, correct Python build frontend

    # Testing
    "pytest==8.3.3",              # Test framework
    "pytest-cov==5.0.0",          # Code coverage reporting
    "coverage==7.6.9",            # Code coverage tool
    "pytest-asyncio==1.2.0",      # Async test support (latest version that supports Python 3.9)
    
    # Type checking
    "mypy==1.11.1",               # Static type checker (primary)
    "pyright==1.1.407",           # Static type checker (secondary validation)
    
    # Code quality
    "ruff==0.14.5",               # Fast Python linter (replaces flake8, isort, pylint, etc.)
   
    # Docs quality
    "pymarkdownlnt==0.9.33",      # A GitHub Flavored Markdown compliant Markdown linter
    "codespell==2.4.1",           # Fix common misspellings in text files
 
    # Type stubs for third-party libraries
    "types-PyYAML==6.0.12.20250915",    # Type stubs for PyYAML
    "types-requests==2.32.4.20250913",  # Type stubs for requests
]

[project.scripts]
cpu = "cpu.__main__:main"

[project.urls]
Homepage = "https://github.com/trz42/cpu"
Documentation = "https://github.com/trz42/cpu/tree/main/docs"
Repository = "https://github.com/trz42/cpu"
Issues = "https://github.com/trz42/cpu/issues"

# ----------------------------
# Tool configuration sections
# ----------------------------

[tool.codespell]
skip = ".git,*.lock,dist,build,*.egg-info,venv,env,.venv,.mypy_cache,.pytest_cache,.ruff_cache,htmlcov,__pycache__,*.png,*.jpg,*.svg,*.gif"
ignore-words-list = "hist,nd,sav,teh"
check-filenames = true
check-hidden = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
skip_covered = false
show_missing = true
fail_under = 80

[tool.coverage.run]
branch = true
source = ["src"]
relative_files = true
omit = [
    "*/tests/*",
#    "*/__init__.py",
]

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
packages = ["cpu", "tests"]
warn_return_any = true
warn_unused_configs = true

# enforce type hints - strict mode
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true

# additional strict checks
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict = true
strict_equality = true

# other settings
disallow_any_unimported = false
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Start with these modules requiring full type coverage
[[tool.mypy.overrides]]
module = "cpu.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Allow some flexibility for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "APScheduler.*",
    "github.*",
]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "build",
    "dist",
]
typeCheckingMode = "strict"
pythonVersion = "3.9"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportPrivateUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "-vv",
    "--strict-markers",
    "--strict-config",
    "--cov=cpu",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "SIM108",  # do not enforce use of ternary operator instead of if-else-block
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.setuptools_scm]

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["src*"]
# exclude = ["tests*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
